# 3d-heat-solver

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: convergence.py  generate_plots.py  ncu_plots.py  paper.tex
docs/data/: convergence.py  generate_convergence_data.py  generate_plots.py  ncu_plots.py
docs/tables/: convergence.tex  derived.tex  ncu.tex  perf.tex
scripts/: benchmark.ps1  benchmark.sh  build-paper.ps1  build-paper.sh  build.ps1  build.sh  profile.ps1  profile.sh  run.ps1  run.sh
src/: main.cpp
src/config/: config.cpp  config.hpp
src/grid/: grid.cpp  grid.cu  grid.cuh  grid.hpp
src/integrator/: integrator.cpp  integrator.cu  integrator.cuh  integrator.hpp
src/io/: vtk_writer.cuh  vtk_writer.hpp
src/simulation/: simulation.cpp  simulation.cu  simulation.hpp
src/utilities/: aligned_soa.cuh  aligned_soa.hpp  helpers.cuh  macros.cuh  macros.hpp  real.cuh  timer.hpp
tests/: aligned_soa.cpp  aligned_soa.cu  config.cpp  config.cu  convergence.cpp  convergence.cu  convergence_order.cpp  convergence_order.cu  cuda_test_guard.cuh  initialization.cpp  initialization.cu  neumann.cpp  neumann.cu  physics.cpp  physics.cu
